src/ioslaves/trash/trashimpl.cpp
@@ -776,7 +776,7 @@ TrashImpl::TrashedFileInfoList TrashImpl::list()
 QStringList TrashImpl::listDir(const QString &physicalPath)
 {
     QDir dir(physicalPath);
-    return dir.entryList(QDir::Dirs | QDir::Files | QDir::Hidden);
+    return dir.entryList(QDir::Dirs | QDir::Files | QDir::Hidden | QDir::System);
 }
 
 bool TrashImpl::infoForFile(int trashId, const QString &fileId, TrashedFileInfo &info)
